--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Hello world!
+# Goci
+
+Goci is a continuous integration server for go that has support for
+github post commit hooks on projects that have the layout like a gopath
+or projects that are packages in the main directory.
