--- a/README
+++ b/README
@@ -3,3 +3,8 @@
 Goci is a continuous integration server for go that has support for
 github post commit hooks on projects that have the layout like a gopath
 or projects that are packages in the main directory.
+
+## How to use
+
+Just add http://zeeb.shadynasty.biz/github/hook as a post commit hook.
+Website coming.
